Coverity analysis defect 116138: Uninitialized pointer field

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Query 2020-08-24
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized pointer field

      The pointer field will point to an arbitrary memory location, any attempt to write may cause corruption. A pointer field is not initialized in the constructor
      /src/mongo/db/exec/multi_iterator.h:82: UNINIT_CTOR 116138 Class member declaration for "_opCtx".
      /src/mongo/db/exec/multi_iterator.cpp:49: UNINIT_CTOR 116138 Non-static class member "_opCtx" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Bernard Gorman
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: