SERVER-50196 Remove redundant _opCtx member in MultiIteratorStage